--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,43 +16,11 @@ jobs:
         run: |
           gh release create ${{ github.ref_name }} --draft --verify-tag --title ${{ github.ref_name }}
 
-  build-plugin:
-    needs: ["create-release"]
-    name: Build Roblox Studio Plugin
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-
-      - name: Setup Aftman
-        uses: ok-nick/setup-aftman@v0.1.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          trust-check: false
-          version: 'v0.2.6'
-
-      - name: Build Plugin
-        run: rojo build plugin --output Rojo.rbxm
-
-      - name: Upload Plugin to Release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh release upload ${{ github.ref_name }} Rojo.rbxm
-
-      - name: Upload Plugin to Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: Rojo.rbxm
-          path: Rojo.rbxm
-
   build:
     needs: ["create-release"]
     strategy:
       fail-fast: false
       matrix:
-        # https://doc.rust-lang.org/rustc/platform-support.html
         include:
           - host: linux
             os: ubuntu-20.04
@@ -112,8 +80,6 @@ jobs:
       - name: Build Release
         run: cargo build --release --locked --verbose --target ${{ matrix.target }}
         env:
-          # Build into a known directory so we can find our build artifact more
-          # easily.
           CARGO_TARGET_DIR: output
 
       - name: Generate Artifact Name
@@ -123,10 +89,8 @@ jobs:
         run: |
           echo "ARTIFACT_NAME=$BIN-${TAG_NAME#v}-${{ matrix.label }}.zip" >> "$GITHUB_ENV"
 
-      - name: Create Archive and Upload to Release
+      - name: Create Archive
         shell: bash
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mkdir staging
 
@@ -140,10 +104,14 @@ jobs:
             zip ../$ARTIFACT_NAME *
           fi
 
-          gh release upload ${{ github.ref_name }} ../$ARTIFACT_NAME
-
       - name: Upload Archive to Artifacts
         uses: actions/upload-artifact@v4
         with:
           path: ${{ env.ARTIFACT_NAME }}
           name: ${{ env.ARTIFACT_NAME }}
+
+      - name: Upload Archive to Release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release upload ${{ github.ref_name }} ${{ env.ARTIFACT_NAME }} --clobber
