--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,4 +119,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release upload ${{ github.ref_name }} ${{ env.ARTIFACT_NAME }} --clobber
+          gh release upload ${{ github.ref_name }} ${{ env.ARTIFACT_NAME }} --clobber --repo ${{ github.repository }}
